0023015: TKOpenGl redesign regression in text printing

Changes:
- the lost code block for scaling text restored;
- the color attributes fixed.