src/OpenGl/OpenGl_Workspace_5.cxx
@@ -623,3 +623,17 @@ const OpenGl_AspectText * OpenGl_Workspace::AspectText(const Standard_Boolean Wi
 }
 
 /*----------------------------------------------------------------------*/
+
+//=======================================================================
+//function : ResetAppliedAspect
+//purpose  : 
+//=======================================================================
+
+void OpenGl_Workspace::ResetAppliedAspect()
+{
+  AspectLine_applied   = NULL;
+  AspectFace_applied   = NULL;
+  AspectMarker_applied = NULL;
+  AspectText_applied   = NULL;
+  TextParam_applied    = NULL;
+}
